# iaxclient

./: .gitignore  README  build_msys2.bat
lib/: CMakeLists.txt  RINGBUFFER_ANALYSIS_ALLSTARLINK.md  audio_encode  audio_encode.c  audio_encode.h  audio_openal.c  audio_openal.h  audio_portaudio.c  audio_portaudio.c.new  audio_portaudio.h  audio_wasapi.patch  handle_paerror.c  iaxclient.h  iaxclientGood.code-workspace  iaxclient_lib.c  pa_ringbuffer_extensions.h
lib/libiax2/src/: iax.c
lib/portmixer/px_win_wmme/: px_win_wmme.c
lib/win/: iaxclient.def  iaxclient_dll.def
